<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/design_default_color_secondary"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="252dp"
        android:layout_height="90dp"
        android:layout_gravity="center"
        android:layout_margin="150dp"
        android:fontFamily="casual"
        android:textStyle="italic"
        android:textColor="@color/white"
        android:text="@string/string"
        android:textSize="50sp" />

    <TextView
        android:layout_width="65dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="160dp"
        android:layout_marginTop="-160dp"
        android:textColor="@color/white"
        android:fontFamily="casual"
        android:text="@string/to"
        android:textSize="47sp" />

    <TextView
        android:layout_width="281dp"
        android:layout_height="97dp"
        android:layout_marginStart="60dp"
        android:fontFamily="cursive"
        android:text="@string/knowledge"
        android:textColor="@color/white"
        android:textSize="70sp" />

    <TextView
        android:layout_width="120dp"
        android:layout_height="90dp"
        android:layout_marginStart="130dp"
        android:fontFamily="cursive"
        android:textColor="@color/white"
        android:text="@string/hub"
        android:textSize="70sp" />

    <Button
        android:id="@+id/buttonGo"
        android:layout_width="200dp"
        android:layout_marginStart="90dp"
        android:layout_marginTop="70dp"
        android:layout_height="60dp"
        android:text="@string/let_s_go" />


</LinearLayout>