<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".TechnologiesActivity">

    <TextView
        android:id="@+id/textAndroid"
        android:layout_width="wrap_content"
        android:layout_height="71dp"
        android:layout_marginLeft="25dp"
        android:fontFamily="cursive"
        android:text="@string/popular_technologies"
        android:textSize="50sp" />

    <ImageView
        android:id="@+id/imageAndroid"
        android:layout_width="178dp"
        android:layout_height="138dp"
        android:layout_marginStart="20dp"
        android:contentDescription="@string/todo"
        android:src="@drawable/android" />

    <Button
        android:id="@+id/button1"
        android:layout_width="186dp"
        android:layout_height="50dp"
        android:layout_marginLeft="10dp"
        android:backgroundTint="@color/design_default_color_primary"
        android:text="@string/android_development"
        android:textSize="11sp" />


    <ImageView
        android:id="@+id/imageWeb"
        android:layout_width="178dp"
        android:layout_height="138dp"
        android:layout_marginTop="-190dp"
        android:layout_marginLeft="210dp"
        android:contentDescription="@string/todo"
        android:src="@drawable/web_dev"
        />

    <Button
        android:id="@+id/button2"
        android:layout_width="186dp"
        android:layout_height="50dp"
        android:layout_marginLeft="200dp"
        android:layout_marginTop="2dp"
        android:backgroundTint="@color/design_default_color_primary"
        android:text="Web Development"
        android:textSize="11sp" />

    <ImageView
        android:id="@+id/imageIos"
        android:layout_width="178dp"
        android:layout_height="149dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        android:contentDescription="@string/todo"
        android:src="@drawable/ios_app" />

    <Button
        android:id="@+id/button3"
        android:layout_width="186dp"
        android:layout_height="50dp"
        android:layout_marginLeft="10dp"
        android:backgroundTint="@color/design_default_color_primary"
        android:text="IOS Application Development"
        android:textSize="11sp" />

    <ImageView
        android:id="@+id/imageML"
        android:layout_width="178dp"
        android:layout_height="138dp"
        android:layout_marginTop="-190dp"
        android:layout_marginLeft="210dp"
        android:contentDescription="@string/todo"
        android:src="@drawable/ml"
        />

    <Button
        android:id="@+id/button4"
        android:layout_width="186dp"
        android:layout_height="50dp"
        android:layout_marginLeft="200dp"
        android:layout_marginTop="2dp"
        android:backgroundTint="@color/design_default_color_primary"
        android:text="Machine Learning"
        android:textSize="11sp" />

    <ImageView
        android:id="@+id/imageBlock"
        android:layout_width="178dp"
        android:layout_height="195dp"
        android:layout_marginStart="20dp"
        android:src="@drawable/blockchain"
        />

    <Button
        android:id="@+id/button5"
        android:layout_width="186dp"
        android:layout_height="50dp"
        android:layout_marginLeft="10dp"
        android:backgroundTint="@color/design_default_color_primary"
        android:text="BlockChain Technology"
        android:textSize="11sp" />

    <ImageView
        android:id="@+id/imageCybersec"
        android:layout_width="178dp"
        android:layout_height="190dp"
        android:layout_marginLeft="210dp"
        android:layout_marginTop="-240dp"
        android:contentDescription="@string/todo"
        android:src="@drawable/cybersec" />

    <Button
        android:id="@+id/button6"
        android:layout_width="186dp"
        android:layout_height="50dp"
        android:layout_marginLeft="200dp"
        android:backgroundTint="@color/design_default_color_primary"
        android:text="CyberSecurity"
        android:textSize="11sp" />

    <androidx.cardview.widget.CardView
        android:id="@+id/contactUs"
        android:layout_width="120dp"
        android:layout_height="30dp"
        android:layout_marginTop="10dp"
        app:cardCornerRadius="15dp"
        android:layout_gravity="center"
        >

        <TextView
            android:layout_width="120dp"
            android:layout_height="30dp"
            android:textSize="20sp"
            android:background="@color/Flower_girl"
            android:fontFamily="serif"
            android:textColor="@color/OffWhite"
            android:text="  Contact Us" />
    </androidx.cardview.widget.CardView>

</LinearLayout>